Hotel para Terabithia (Exercicios Java Script)

--- a/Caixa eletronico/CaixaEletronico.html
+++ b/Caixa eletronico/CaixaEletronico.html
@@ -81,7 +81,7 @@
 					}
 				}
 
-				if (isNaN(senhasaque) || sessionStorage === '') {
+				if (isNaN(senhasaque) || senhasaque === '') {
 					alert('Por favor, insira a senha novamente');
 					fazer_saque();
 				} else {
